--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -1,5 +1,6 @@
 name: learn-github-actions
-run-name: ${{ github.actor }} is learning GitHub Actions
+#run-name: ${{ github.actor }} is learning GitHub Actions
+run-name: Deploy to ${{ inputs.deploy_target }} by @${{ github.actor }}
 on: [push]
 jobs:
   check-bats-version:
@@ -11,3 +12,6 @@ jobs:
           node-version: '14'
       - run: npm install -g bats
       - run: bats -v
+      
+ 
+       
